--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,16 +11,16 @@
 
 .main {
   @include flexCentered;
-  padding-top: 50px;
+  padding-top: 25px;
 
   &__content {
-    @include mainAxisCentered;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     max-width: ($cardWidth + $cardHorizontalMargin) * $cardsPerRow;
   }
 
   &__item {
-    flex: 0 0 $cardWidth;
-    margin: 0 $cardHorizontalMargin / 2 50px;
+    width: 200px;
+    margin: 25px $cardHorizontalMargin / 2;
   }
 }
