--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,6 @@ $secondaryColor: #00acdc;
 $headerHeight: 60px;
 $logoSize: 40px;
 $cardWidth: 200px;
-$cardHorizontalMargin: 48px;
+$horizontalGap: 48px;
 $cardsPerRow: 4;
 $numberOfStars: 0, 1, 2, 3, 4, 5;
